[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://water_background.jpg" type="Texture" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -272, 306.145, 0, 0, 0, 0, -272, 306.145, 0, 0, 0, 0, -272, 306.145, 0, 0, 0, 0, -272, 306.145, 0, 0, 0, 0, -272, 306.145, 0, 0, 0, 0, 2992, 306.145, 0, 0, 0, 0, -272, 306.145 )
}

[node name="Main" type="Node"]
script = ExtResource( 3 )
mob_scene = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
light_mask = 512
margin_right = 640.0
margin_bottom = 368.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 480, 40 )

[node name="MobTimer" type="Timer" parent="."]

[node name="MobPath" type="Path2D" parent="."]
position = Vector2( 4, 4 )
scale = Vector2( 0.25, 0.4573 )
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( -272, 306.145 )

[node name="MobPath2" type="Path2D" parent="."]
position = Vector2( 0, 51 )
scale = Vector2( 0.25, 0.4573 )
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath2"]
position = Vector2( -272, 306.145 )

[node name="MobPath3" type="Path2D" parent="."]
position = Vector2( 0, 96 )
scale = Vector2( 0.25, 0.4573 )
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath3"]
position = Vector2( -272, 306.145 )

[node name="MobPath4" type="Path2D" parent="."]
position = Vector2( 0, 144 )
scale = Vector2( 0.25, 0.4573 )
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath4"]
position = Vector2( -272, 306.145 )

[node name="MobPath5" type="Path2D" parent="."]
position = Vector2( 0, 191 )
scale = Vector2( 0.25, 0.4573 )
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath5"]
position = Vector2( -272, 306.145 )

[node name="StartTimer" type="Timer" parent="."]

[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
